# what-they-mean

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  serve.py  vendor.sh
.claude/: settings.json
.github/workflows/: e2e.yml  pages.yml  test.yml
docs/superpowers/plans/: 2026-06-24-multipage-database-demo.md
docs/superpowers/specs/: 2026-06-24-multipage-database-demo-design.md  2026-06-25-etl-pipeline-demo-design.md  2026-06-26-data-platform-map-design.md
tests/: test_e2e.py  test_e2e_api.py  test_e2e_db.py  test_e2e_etl.py  test_e2e_menu.py  test_e2e_platform.py  test_e2e_roles.py  test_server.py
web/: app.js  index.html  styles.css
web/api/: app.js  index.html  recipe.json  styles.css
web/db/: app.js  data.js  index.html  styles.css
web/etl/: app.js  data.js  index.html  styles.css
web/platform/: LICENSES.md  app.js  data.js  icons.js  index.html  styles.css
web/roles/: app.js  data.js  index.html  styles.css
