[project]
name = "what-they-mean"
version = "0.1.0"
description = "A tiny SPA explaining tech concepts to non-developers."
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.5",
    # Pinned to the Playwright build whose bundled Chromium (revision 1194) is
    # pre-installed in the dev image, so e2e tests don't download a browser.
    "playwright==1.56.0",
]
